# olliq

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
olliq/: __init__.py  __main__.py  _config.py  _core.py  _exceptions.py  cli.py
tests/: test_olliq.py
