[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "olliq"
version = "0.1.0"
description = "Minimal reusable bridge for local and cloud Ollama execution."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ollama", "llm", "cli", "python", "cloud"]
authors = [
    {name = "Gianni Amato"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ollama>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/guelfoweb/olliq"
Repository = "https://github.com/guelfoweb/olliq"
Issues = "https://github.com/guelfoweb/olliq/issues"

[project.scripts]
olliq = "olliq.cli:main"

[tool.setuptools]
packages = ["olliq"]
